[project]
name = "heartbeat"
version = "0.1.0"
description = "ML-driven ECG classification app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
    "imbalanced-learn>=0.14.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[dependency-groups]
dev = ["jupyter", "nbstripout"]
test = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
