[project]
name = "heartbeat"
version = "0.1.0"
description = "ML-driven ECG classification app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
    "imbalanced-learn>=0.14.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

# keep dev deps separate from runtime deps
[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
    "jupyter",
    "mypy>=1.20.1",
    "nbstripout",
]
test = [
    "pytest>=9.0.3",
]

# required for editable install of package folder; uv uses as backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# register heartbeat as installable package
[tool.hatch.build.targets.wheel]
packages = ["heartbeat"]

# required for django
[tool.mypy]
plugins = ["mypy_django_plugin.main"]

# required for django
[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

# required for django
[tool.django-stubs]
django_settings_module = "heartbeat.config.settings"
